--- a/packaging/group-play-service.service
+++ b/packaging/group-play-service.service
@@ -3,8 +3,9 @@ Description=Start the group play service
 After=bluetooth.service
 
 [Service]
-ExecStart=/usr/bin/group-play-service-svc
-Type=oneshot
+ExecStart=/usr/bin/group-play-svc
+Restart=always
+RestartSec=1
 
 [Install]
 WantedBy=graphical.target
