--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,25 +6,37 @@ project(group-play-svc CXX)
 INCLUDE(FindPkgConfig)
 PKG_CHECK_MODULES(rpkgs-dlog REQUIRED dlog)
 PKG_CHECK_MODULES(rpkgs-glib REQUIRED glib-2.0)
+PKG_CHECK_MODULES(rpkgs-aul REQUIRED aul)
+PKG_CHECK_MODULES(rpkgs-capi REQUIRED capi-system-info capi-appfw-app-manager capi-network-wifi capi-appfw-application)
+PKG_CHECK_MODULES(rpkgs-ecore REQUIRED ecore ecore-x ecore-evas ecore-input)
+PKG_CHECK_MODULES(rpkgs REQUIRED vconf heynoti)
 
 # Add CFLAGS used for required modules
 ADD_DEFINITIONS(${rpkgs-dlog_CFLAGS})
 ADD_DEFINITIONS(${rpkgs-glib_CFLAGS})
+ADD_DEFINITIONS(${rpkgs-aul_CFLAGS})
+ADD_DEFINITIONS(${rpkgs-ecore_CFLAGS})
+ADD_DEFINITIONS(${rpkgs_CFLAGS})
+ADD_DEFINITIONS(${rpkgs-capi_CFLAGS})
 
 # Set include directories
 INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}/include
 	${rpkgs-dlog_INCLUDE_DIRS}
+    ${rpkgs-aul_INCLUDE_DIRS}
+    ${rpkgs-capi_INCLUDE_DIRS}
+    ${rpkgs-ecore_INCLUDE_DIRS}
 	)
 
 # Set sources
 ADD_EXECUTABLE(${PROJECT_NAME}
 	src/common.cpp
 	src/main.cpp
+    src/udp_test.cpp
 )
 
 # Set LDFLAGS
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${rpkgs-dlog_LDFLAGS} ${rpkgs-glib_LDFLAGS} "-ldl -lrt")
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OSP_LIBRARIES} ${rpkgs-aul_LDFLAGS} ${rpkgs-dlog_LDFLAGS} ${rpkgs-capi_LDFLAGS} ${rpkgs-glib_LDFLAGS} ${rpkgs-ecore_LDFLAGS} "-ldl -lrt -lvconf")
 
 # Set CFLAGS
 ADD_DEFINITIONS(-Wall -O3) 
